# edgeql-qb

./: .cz.toml  .gitignore  .pre-commit-config.yaml  .releaserc.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  setup.cfg  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: tests.yml
docs/: Gemfile  _config.yml  contributing.md  functions.md  index.md  operations.md  queries.md  type_casts.md
edgeql_qb/: __init__.py  expression.py  frozendict.py  func.py  operators.py  queries.py  render.py  types.py
edgeql_qb/render/: condition.py  count.py  delete.py  expression.py  func.py  group.py  insert.py  order_by.py  pagination.py  query_literal.py  select.py  tools.py  types.py  update.py  with_expr.py
tests/: conftest.py  test_frozendict.py  test_operators.py  test_render.py  test_types.py
tests/dbschema/: default.esdl
tests/dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql
tests/test_renderer/: test_count_renderer.py  test_delete_renderer.py  test_group_renderer.py  test_insert_renderer.py  test_select_renderer.py  test_update_renderer.py
tests/test_renderer/test_select_renderer/: test_datatypes.py  test_exists.py  test_filters.py  test_operations.py  test_order_by.py  test_pagination.py  test_select.py
tests/test_renderer/test_with_renderer/: test_with_delete.py  test_with_group.py  test_with_insert.py  test_with_select.py  test_with_update.py
